# xoshiro-OpenCl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  config.cmake.template  config_global.cmake  configure_project.js  main.cpp  makefile
gsubmods/: CMakeLists.txt
kernels/: test_kernel.cl  xoshiro256**.cl
src/: CMakeLists.txt  opencl_utils.hpp  utils.hpp
src/kernels/: test_kernel.cl  xoshiro256**.cl
